<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <SurfaceView
        android:id="@+id/decoder_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/nav_button_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="#80000000"
        android:visibility="gone"
        tools:visibility="visible"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/back_button"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/home_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/home_button"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/appswitch_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/appswitch_button"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>
